--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,9 @@
 <h1>All Available Articles</h1>
 
 <p>
-        <%= button_to "Create new article", new_article_path, method: :get, class: 'btn btn-primary', id: 'createArticleButton'%>
-<% unless current_user %>
-        <p style="color: #B00100">Sign in to post articles</p>
+        <%= button_to "Create new article", new_article_path, method: :get, class: 'btn btn-primary', id: 'createArticleButton' %>
+        <% unless current_user %>
+        <p style="color: #a23023">Sign in to post articles</p>
         <script type="text/javascript"> document.getElementById('createArticleButton').disabled = true </script>
 <% end %>
 <br>
@@ -45,20 +45,38 @@
                                         </div>
                                 <% end %>
                         </div>
-                        <hr>
+
 
                         <div class="container">
-                                <p><%= article.text %></p>
-                                <i style="font-size: 14px; color: #666666">Created at:  <%= article.created_at %></i><br>
+<!--                                <br>-->
                                 <hr>
+                                <label><%= article.text %></label>
+                                <hr>
+<!--                                <br>-->
+                                <div class="row">
+                                        <div class="col">
+                                                <i style="font-size: 14px; color: #666666">Created at:  <%= article.created_at %></i>
+                                        </div>
 
-                                <% if article.comments.empty? %>
-                                        <i>No comments</i>
-                                <% else %>
-                                        <button class="btn btn-sm btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample<%= article.id %>" aria-expanded="false" aria-controls="collapseExample">
-                                                Comments: (<%= article.comments.size %>)
-                                        </button>
-                                <% end %>
+                                        <div class="col-xs-2">
+                                                <% if article.comments.empty? %>
+                                                        <i class="form-group">No comments</i>
+                                                <% else %>
+                                                        <button class="btn btn-sm btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample<%= article.id %>" aria-expanded="false" aria-controls="collapseExample">
+                                                                Comments: (<%= article.comments.size %>)
+                                                        </button>
+                                                <% end %>
+                                        </div>
+
+                                        <div class="col-xs-2">
+                                                <% if current_user %>
+                                                        <%= button_to 'Leave comment', article_path(article.id), class: 'btn btn-sm btn-primary ml-3', method: :get %>
+                                                <% else %>
+                                                        <i class="form-group ml-3" style="color: #a23023">Sign in to
+                                                                leave comment</i>
+                                                <% end %>
+                                        </div>
+                                </div>
 
                                 <div class="collapse" id="collapseExample<%= article.id %>">
                                         <div class="card card-body" style="background-color: #dce6de">
@@ -68,14 +86,15 @@
 
                                                                 <label style="font-size: small">Commenter: <%= comment.author %></label><br>
                                                                 <label style="font-size: small">Comment: <%= comment.body %></label><br>
-                                                                <label style="font-size: 12px; color: #666666"> Created at:  <%= comment.created_at %></label>
+                                                                <label style="font-size: 12px; color: #666666"> Created
+                                                                        at:  <%= comment.created_at %></label>
 
                                                         </div>
-
 
                                                 <% end %>
                                         </div>
                                 </div>
+
                         </div>
 
                 </div>
