--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,8 +35,8 @@
                 <!--стало:        -->
 
                 <% if user_signed_in? %>
-                        <%= current_user.username + " is logged in" %>
-                        | <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+                        <span style="color: #34ce57"><%= current_user.username + " is logged in" %></span>
+                         <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
                 <% else %>
                         <%= link_to 'Sign In', new_user_session_path %>
                 <% end %>
