--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,9 +49,12 @@
 
         </a>
 
-        <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search in articles" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <form class="form-inline" action="/search/index">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search in articles" aria-label="Search" data-toggle="tooltip" data-placement="bottom" title="Search in articles (title & text) and comments" name="search_query">
+<!--                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
+
+                <% puts __LINE__, search_index_path, "=======", search_index_url %>
+                <%= button_to 'Search', search_index_path, class: 'btn btn-outline-success my-2 my-sm-0', type: 'submit' %>
         </form>
 
 
