Update contact internationalization title in locales & in view, add spec feature for visitor create contact

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,8 @@
 
         <a class="nav-link" href="<%= terms_path %>">Terms</a>
 
+        <a class="nav-link" href="<%= contacts_path %>">Contacts</a>
+
         <a class="nav-link">
                 <!--        заменили тэги с ссылками Sign in и Sign out (тк путь /users/sign_in и ...out - чтобы не было хардкода )-->
                 <!--        <a href="/users/sign_in">Sign in</a>-->
