--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,4 @@
-<H1>Contacts</H1>
+<H1><%= t('contacts.contact_us')%></H1>
 
 <%= form_for :contacts, url: '/contacts' do |f| %>
         <% if @contact && @contact.errors.any? %>
