Add changes from stash

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,16 @@
         <!-- Bootstrap -->
         <link href="/css/bootstrap.css" rel="stylesheet">
 
-        <!--    jQuery-->
+        <!-- jQuery-->
         <script src="/packs/js/jquery-1.9.1.min.js"></script>
 
         <script src="/packs/js/popper.js"></script>
         <script src="/packs/js/bootstrap.bundle.js"></script>
 
+        <!-- Google icons -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+        <!-- Turbolinks -->
         <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
         <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
