Edit shared views: _actions_button.html.erb, app/views/shared/_article.html.erb, app/views/shared/_comment.html.erb
Edit behaviour for edit action in shared actions_button for different entities. For comments edit will fire an AJAX-request and edit form will appear below the according comment, but for article - it will load new page rendering article's edit view

--- a/app/views/shared/_actions_button.html.erb
+++ b/app/views/shared/_actions_button.html.erb
@@ -9,7 +9,7 @@
                         <div class="container ">
 
                                 <a class="dropdown-item">
-                                        <%= link_to 'Edit', edit_path, remote: true %>
+                                        <%= link_to 'Edit', edit_path, remote: remote %>
                                 </a>
 
                                 <a class="dropdown-item">
