--- a/app/views/shared/_article.html.erb
+++ b/app/views/shared/_article.html.erb
@@ -28,7 +28,8 @@
                                 <%=
                                         render 'shared/actions_button',
                                                edit_path: edit_article_path(element),
-                                               delete_path: article_path(element)
+                                               delete_path: article_path(element),
+                                               remote: false
                                 %>
 
                         <% end %>
