--- a/app/views/shared/_comment.html.erb
+++ b/app/views/shared/_comment.html.erb
@@ -26,7 +26,8 @@
                                                 <%=
                                                         render 'shared/actions_button',
                                                                edit_path: edit_comment_path(comment),
-                                                               delete_path: comment_path(comment)
+                                                               delete_path: comment_path(comment),
+                                                               remote: true
                                                 %>
                                         <% end %>
                                 </div>
