--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,86 +6,19 @@
         <p style="color: #B00100">Sign in to post articles</p>
         <script type="text/javascript"> document.getElementById('createArticleButton').disabled = true </script>
 <% end %>
-<br>
+</p>
+
+<p>
+        <%= paginate @articles %>
 </p>
 
 <% @articles.each do |article| %>
 
         <%= render 'shared/article', element: article, details: {} %>
 
-<!--        <div class="shadow p-3 mb-4 bg-info rounded">-->
-
-<!--                <div class="container">-->
-<!--                        <div class="row">-->
-
-<!--                                <div class="col col-xs-8">-->
-<!--                                        <strong class="mr-auto"><%#= link_to article.title, article_path(article) %></strong>-->
-<!--                                </div>-->
-
-                                <%# if current_user && current_user.id == article.user_id %>
-<!--                                        <div class="col-xs-2" align="center">-->
-
-<!--                                                <div class="btn-group align-content-center">-->
-<!--                                                        <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-<!--                                                                Actions-->
-<!--                                                        </button>-->
-
-<!--                                                        <div class="dropdown-menu bg-dark btn-sm shadow" aria-labelledby="dropdownMenuButton">-->
-<!--                                                                <div class="container ">-->
-<!--                                                                        <a class="dropdown-item"><%##= link_to 'Show', article_path(article) %></a>-->
-
-<!--                                                                        <a class="dropdown-item"><%#= link_to 'Edit', edit_article_path(article) %></a>-->
-<!--                                                                        <a class="dropdown-item">-->
-<!--                                                                <span style="color: #af2927">-->
-                                                                        <%#= link_to 'Delete', article_path(article), method: :delete, data: { confirm: 'Are you sure you want to delete this?' }, style: "color: #af2927" %>
-<!--                                                                </span>-->
-<!--                                                                        </a>-->
-<!--                                                                </div>-->
-<!--                                                        </div>-->
-
-<!--                                                </div>-->
-<!--                                        </div>-->
-                                <%# end %>
-<!--                        </div>-->
-<!--                        <hr>-->
-
-<!--                        <div class="container">-->
-<!--                                <p><%#= article.text %></p>-->
-<!--                                <i style="font-size: 14px; color: #666666">Created at:  <%#= article.created_at.localtime %></i><br>-->
-<!--                                <hr>-->
-
-                                <%# if article.comments.empty? %>
-<!--                                        <i>No comments</i>-->
-                                <%# else %>
-<!--                                        <button class="btn btn-sm btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample<%#= article.id %>" aria-expanded="false" aria-controls="collapseExample">-->
-<!--                                                Comments: (<%#= article.comments.size %>)-->
-<!--                                        </button>-->
-                                <%# end %>
-
-<!--                                <div class="collapse" id="collapseExample<%#= article.id %>">-->
-<!--                                        <div class="card card-body" style="background-color: #dce6de">-->
-                                                <%# article.comments.each do |comment| %>
-
-                                                        <%#= render 'shared/comment', element: comment, details: {} %>
-<!--                                                        <div class="shadow p-2 mb-3 rounded" style="width: fit-content; background-color: #9bc4f2">-->
-
-<!--                                                                <label style="font-size: small">Commenter: <%#= comment.author %></label><br>-->
-<!--                                                                <label style="font-size: small">Comment: <%#= comment.body %></label><br>-->
-<!--                                                                <label style="font-size: 12px; color: #666666"> Created at:  <%#= comment.created_at %></label>-->
-
-<!--                                                        </div>-->
-
-
-                                                <%# end %>
-<!--                                        </div>-->
-<!--                                </div>-->
-<!--                        </div>-->
-
-<!--                </div>-->
-<!--        </div>-->
-
-
 <% end %>
 
+<%= paginate @articles %>
+<%#= will_paginate @articles %>
 
 
