--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,57 +3,10 @@
 <%= link_to 'All Articles', articles_path, class: 'btn btn-primary'%>
 </p>
 
-<h1>Article</h1>
-
-<div class="shadow p-3 mb-5 bg-info rounded">
-
-        <div class="container">
-
-                <strong class="mr-auto"><%= @article.title %></strong>
-                <hr>
-                <div class="container">
-                        <%= @article.text %><br>
-                        <i style="font-size: 14px; color: #666666">Created
-                                at:  <%= @article.created_at %></i><br><br>
-
-
-                        <% if @article.comments.empty? %>
-                                <hr>
-                                <i>No comments</i>
-                        <% else %>
-                                <button class="btn btn-sm btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample<%= @article.id %>" aria-expanded="false" aria-controls="collapseExample">
-                                        Comments: (<%= @article.comments.size %>)
-                                </button>
-                        <% end %>
-
-                        <div class="collapse" id="collapseExample<%= @article.id %>">
-                                <div class="card card-body" style="background-color: #dce6de">
-                                        <% @article.comments.each do |comment| %>
-
-                                                <div class="shadow p-3 mb-3 rounded" style="width: fit-content; background-color: #9bc4f2">
-
-                                                        <label style="font-size: small">
-                                                                Commenter: <%= comment.author %></label><br>
-                                                        <label style="font-size: small">
-                                                                Comment: <%= comment.body %></label><br>
-                                                        <label style="font-size: 12px; color: #666666"> Created
-                                                                at:  <%= comment.created_at %></label>
-
-                                                </div>
-
-
-                                        <% end %>
-                                </div>
-                        </div>
-                </div>
-
-        </div>
-</div>
-
+<%= render 'shared/article', details: {} %>
 
 <p>Add comment to this article:</p>
 <%= form_for([@article, @article.comments.build]) do |f| %>
-
         <form>
                 <div class="form-group">
                         <label for="exampleInputEmail1" class="form-text text-info">Your comment text:</label>
