--- a/app/views/shared/_article.html.erb
+++ b/app/views/shared/_article.html.erb
@@ -1,3 +1,4 @@
+<% element ||= @article %>
 <div class="shadow p-3 mb-4 bg-info rounded">
 
         <div class="container">
@@ -64,12 +65,25 @@
                                 </div>
 
                                 <div class="col-xs-2">
+
                                         <% if element.comments.empty? %>
                                                 <i class="form-group">No comments</i>
+
                                         <% else %>
-                                                <button class="btn btn-sm btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample<%= element.id %>" aria-expanded="false" aria-controls="collapseExample">
-                                                        Comments <span class="badge badge-pill badge-light"><%= element.comments.size %></span>
-                                                </button>
+                                                        <button
+                                                                id="commentsButtonForArticle<%= element.id %>"
+                                                                class="btn btn-sm btn-primary"
+                                                                data-comments-button-article-id="<%= element.id %>"
+                                                                data-toggle="collapse"
+                                                                data-target="#collapseExample<%= element.id %>"
+                                                                aria-expanded="false" aria-controls="collapseExample"
+
+                                                                data-PerPage="<%= ENV['comments_per_page'] %>"
+                                                                data-CommentsSize="<%= element.comments.size %>"
+                                                        >
+                                                                Comments <span class="badge badge-pill badge-light"><%= element.comments.size %></span>
+                                                        </button>
+
                                         <% end %>
                                 </div>
 
@@ -84,11 +98,12 @@
 
                         <div class="collapse" id="collapseExample<%= element.id %>">
                                 <div class="card card-body" style="background-color: #dce6de">
-                                        <% element.comments.each do |comment| %>
 
-                                                <%= render 'shared/comment', element: comment, details: details, user_id: element.try(:user_id) %>
+                                        <div class="commentsScrollArea" id="commentsScrollArea<%= element.id %>" data-comments-scroll-article-id="<%= element.id %>">
 
-                                        <% end %>
+                                                <div id="comments_list_article_<%= element.id %>" data-batchNumber="-1"></div>
+
+                                        </div>
                                 </div>
                         </div>
 
